--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-.app .link {
+:root {
+  --main-color: white;
+}
+
+.link {
   color: inherit;
   text-decoration: none;
 }/*# sourceMappingURL=app.css.map */
