--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,28 @@
-.app {
+// .app {
 
-    .link{
-        color: inherit;
-        text-decoration: none;
+//     .link{
+//         color: inherit;
+//         text-decoration: none;
+//     }
+// }
+
+:root {
+    --main-color: white;
+}
+
+.link {
+    color: inherit;
+    text-decoration: none;
+}
+
+@mixin tablet {
+    @media (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media (max-width: 480px) {
+        @content;
     }
 }
