--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -19,7 +19,30 @@
         flex: 2;
         display: flex;
         gap: 10px;
-    }
+        position: relative;
+        overflow: hidden;
 
-    
+        button{
+            position: absolute;
+            min-width: 100px;
+            width: fit-content;
+            height: 50px;
+            padding: 10px;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            cursor: pointer;
+            border: none;
+            background-color: white;
+            text-transform: uppercase;
+        }
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 } 
