--- a/src/components/FeaturedProducts/FeaturedProducts.css
+++ b/src/components/FeaturedProducts/FeaturedProducts.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 50px;
 }
 .featuredProducts h1 {
   flex: 2;
