--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -11,8 +11,8 @@
 .slider .container img {
   width: 100vw;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .slider .icons {
   width: -moz-fit-content;
