--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=Home.css.map */
+.home {
+  background-color: var(--main-color);
+  overflow: hidden;
+}/*# sourceMappingURL=Home.css.map */
