--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,6 +1,8 @@
 .slider {
   height: calc(100vh - 80px);
   width: 100vw;
+  position: relative;
+  overflow: hidden;
 }
 .slider .container {
   width: 300vw;
