--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,7 +1,8 @@
 .slider{
     height: calc(100vh - 80px);
     width: 100vw;
-    // position: absolute;
+    position: relative;
+    overflow: hidden;
 
     .container{
         width: 300vw;
