--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -1,1 +1,96 @@
-/*# sourceMappingURL=Product.css.map */
+.product {
+  padding: 20px 50px;
+  display: flex;
+  gap: 50px;
+}
+.product .left {
+  flex: 2;
+  display: flex;
+  gap: 20px;
+}
+.product .left .images {
+  flex: 1;
+}
+.product .left .images img {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+.product .left .mainImg {
+  flex: 3;
+}
+.product .left .mainImg img {
+  width: 100%;
+  max-height: 800px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.product .right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.product .right .price {
+  font-size: 24px;
+  color: gray;
+  font-weight: 500;
+}
+.product .right p {
+  font-size: 17px;
+  font-weight: 300;
+  text-align: justify;
+}
+.product .right .quantity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.product .right .quantity button {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border: none;
+}
+.product .right .add {
+  width: 250px;
+  padding: 10px;
+  background-color: gray;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  cursor: pointer;
+  border: none;
+  font-weight: 500;
+}
+.product .right .link {
+  display: flex;
+  gap: 20px;
+}
+.product .right .link .item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  color: gray;
+  font-style: 12px;
+}
+.product .right .info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: gray;
+  font-style: 12px;
+  margin-top: 30px;
+}
+.product .right .info hr {
+  width: 200px;
+  bottom: 1px solid rgb(238, 237, 237);
+}/*# sourceMappingURL=Product.css.map */
