--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -1,3 +1,108 @@
 .product{
-    
+    padding: 20px 50px;
+    display: flex;
+    gap: 50px;
+
+    .left{
+        flex: 2;
+        display: flex;
+        gap: 20px;
+
+        .images{
+            flex: 1;
+
+            img{
+                width: 100%;
+                height: 150px;
+                object-fit: cover;
+                cursor: pointer;
+                margin-bottom: 10px;
+            }
+        }
+
+        .mainImg {
+            flex: 3;
+            img{
+                width: 100%;
+                max-height: 800px;
+                object-fit: cover;
+            }
+        }
+    }
+
+
+    .right{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+        .price{
+            font-size: 24px;
+            color: gray;
+            font-weight: 500;
+        }
+
+        p{
+            font-size: 17px;
+            font-weight: 300;
+            text-align: justify;
+        }
+
+        .quantity{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            button{
+                width: 25px;
+                height: 25px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                border: none;
+            }
+        }
+
+        .add{
+            width: 250px;
+            padding: 10px;
+            background-color: gray;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            cursor: pointer;
+            border: none;
+            font-weight: 500;
+        }
+
+        .link{
+            display: flex;
+            gap: 20px;
+
+            .item{
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            color: gray;
+            font-style: 12px;
+            }
+        }
+        .info{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            color: gray;
+            font-style: 12px;
+            margin-top: 30px;
+
+            hr{
+               width: 200px;
+               bottom: 1px solid rgb(238, 237, 237); 
+            }
+        }
+    }
 }
